feat(backend): support selected checkout and order rules